Squashed commit of the following:
commit 4d4eac79ece0b93227221a44ee014b63b919abaa
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 14:41:59 2025 +0200

    Update license header and refactor ForthSyntacticAnalyzer

    Replaced the license header in all source files with a concise GitHub repository link. Refactored ForthSyntacticAnalyzer for improved readability, using readonly fields, consistent formatting, and minor logic cleanups.

commit 5103b143b00cb292ae07d9caa7d5df4a47c26ee3
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 14:29:48 2025 +0200

    Add execution events and refactor console output

    Introduces OnExecutionStart and OnExecutionEnd events to ForthCompiler and ForthConsole for better execution lifecycle handling. Refactors event handler wiring and console output to display build and execution status. Updates copyright headers across multiple files to reflect 'World's first Forth compiler for the .NET platform'.

commit e116c0d8aecafd642be8c7a4bff2487b2d0cf25f
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 14:12:18 2025 +0200

    Refactor console output formatting for errors and events

    Standardized error and event messages by removing extra whitespace and tabs in ForthConsole and ForthCodeGenerator. Updated event handler names for consistency and improved readability. No functional changes to compilation logic.

commit 25d8d66533d9cd88012611d76c6858c33b5e587f
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 11:42:55 2025 +0200

    Update ForthConsole.cs

commit 8ef1d87c91231092f4b091e3f5b3afa6248f83bb
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 11:42:52 2025 +0200

    Update ForthCodeGenerator.cs

commit 3639186f1279e79bf51325868146dd434cc63b04
Author: Valer BOCAN <vbocan@gmail.com>
Date:   Mon Nov 24 11:34:15 2025 +0200

    Update console messages for clarity and consistency

    Revised various status and success messages in ForthConsole and ForthCodeGenerator to be more concise and u

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,98 @@
-/DeltaForth/bin
-/DeltaForth/obj
+# Build artifacts
+**/bin/
+**/obj/
 
-# Visual Studio Files and Folders
-/.vs
-/DeltaForth/*.cproj.users
+# Visual Studio / Visual Studio Code
+.vs/
+.vscode/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.csproj.user
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+# .NET Core / .NET
+project.lock.json
+project.fragment.lock.json
+artifacts/
+**/Properties/launchSettings.json
+
+# NuGet
+*.nupkg
+*.snupkg
+**/packages/*
+!**/packages/build/
+*.nuget.props
+*.nuget.targets
+
+# Test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.trx
+*.coverage
+*.coveragexml
+
+# NCrunch
+_NCrunch_*
+.*crunch*.local.xml
+nCrunchTemp_*
+
+# Rider
+.idea/
+*.sln.iml
+
+# ReSharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# CodeRush
+.cr/
+
+# Python (if any tools use it)
+__pycache__/
+*.py[cod]
+*$py.class
+
+# OS Files
+.DS_Store
+Thumbs.db
+*.swp
+*~
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.cache
+
+# Documentation build artifacts
+docs/_build/
+docs/.doctrees/
+
+# Delta Forth specific
+*.exe
+*.dll
+!**/examples/**/*.exe
+!**/examples/**/*.dll
+modernize-header-template.txt
